<resources>
    <string name="app_name">GPS Recording</string>
    <string name="record">Record</string>
    <string name="settings">Settings</string>
    <string name="title_activity_record">Record</string>
    <string name="loading_track">Loading Track...</string>
    <string name="title_activity_track">Track</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>
    <string name="pause">Pause</string>
    <string name="record_notification_title">Recording GPS</string>
    <string name="record_notification_message">A track is being recorded.</string>
    <string name="record_channel_name">GPSRecording</string>
    <string name="record_channel_description">GPSRecording Notification Channel</string>
    <string name="time_filter_seconds">Time Filter (seconds)</string>
    <string name="display_metric_units">Display Metric Units</string>
    <string name="distance_filter_meters">Distance Filter (meters)</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="track_saved">Track Successfully Saved</string>
    <string name="run">Run</string>
    <string name="bike">Bike</string>
    <string name="ski">Ski</string>
    <string name="hike">Hike</string>
    <string name="walk">Walk</string>
    <string name="title_activity_track_map">TrackMapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
</resources>
